--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <link href="/favi.ico" rel="icon" type="image/x-icon" />
+    <link href="./img/favi.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
     <nav>
