--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <nav>
       <p>Follow  </p>
       <ul>
-         <li><a href="https://www.facebook.com/sreeman.marsh.3"><i class="fab fa-facebook-f"></i><span></span></a></li>
-         <li><a href="https://twitter.com/sreeman16111"><i class="fab fa-twitter"></i><span></span></a></li>
-         <li><a href="https://www.instagram.com/imsreeman/"><i class="fab fa-instagram"></i><span></span></a></li>
-         <li><a href="https://www.linkedin.com/in/sreeman-s-053846171/"><i class="fab fa-linkedin-in"></i><span></span></a></li>
-         <li><a href="https://github.com/Sreeman16"><i class="fab fa-github"></i><span></span></a></li>
+         <li><a href="https://www.facebook.com/sreeman.marsh.3" target="_blank"><i class="fab fa-facebook-f"></i><span></span></a></li>
+         <li><a href="https://twitter.com/sreeman16111" target="_blank"><i class="fab fa-twitter"></i><span></span></a></li>
+         <li><a href="https://www.instagram.com/imsreeman/" target="_blank"><i class="fab fa-instagram"></i><span></span></a></li>
+         <li><a href="https://www.linkedin.com/in/sreeman-s-053846171/" target="_blank"><i class="fab fa-linkedin-in"></i><span></span></a></li>
+         <li><a href="https://github.com/Sreeman16" target="_blank"><i class="fab fa-github"></i><span></span></a></li>
       </ul>
    </nav>
 
